...
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >
...
        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_height="212dp"
            android:orientation="vertical" >
        
            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button_gplus"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
            <Button
                android:id="@+id/prefs_button"
...
